--- a/src/app/pokemon-listing/pokemon-listing.component.html
+++ b/src/app/pokemon-listing/pokemon-listing.component.html
@@ -1,9 +1,5 @@
 <section class="pokemon-lists">
-    <h1><span class="badge-primary">Pokemon Lists</span></h1>
-    <!-- <div class="form-group form-inline">
-        search: <input class="form-control ml-2" type="text" name="searchTerm" [(ngModel)]="service.searchTerm"/>
-        <span class="ml-3" *ngIf="service.loading$ | async">Loading...</span>
-    </div> -->
+    <h1 class="title"><span class="badge-primary">Pokemon Lists</span></h1>
     <table class="table table-sm table-responsive">
         <thead>
           <tr>
@@ -16,7 +12,7 @@
           <tr *ngFor="let item of (pokemon_data | paginationPipe:page:itemsPerPage); let i = index">
             <th scope="row">{{i+1}}</th>
             <td>{{item.name | titlecase}}</td>
-            <td (click)="show_detail(item.url)" style="cursor: pointer;">Show Detail</td>
+            <td class="button" (click)="show_detail(item.url)" style="cursor: pointer;">Show Detail</td>
           </tr>
         </tbody>
       </table>
