Design changes done

--- a/src/app/pokemon-detail/pokemon-detail.component.css
+++ b/src/app/pokemon-detail/pokemon-detail.component.css
@@ -1,6 +1,8 @@
 .card-body.pokemon_details {
     display: grid;
     grid-template-columns: 1fr 1fr;
+    gap: 1em;
+    background: aliceblue;
 }
 .pokemon-image{
     width: 35%;
